--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
       <p>
         Peer-to-Peer Decentralized Exchange for <strong>Fungible</strong><br />and <strong>Non-Fungible Tokens (NFTs)</strong>.
       </p>
-      <a class="main-btn" href="https://testnet.exa.finance">
-        Launch Testnet App
+      <a class="main-btn" href="https://exa.finance">
+        Coming soon !
       </a>
     </div>
   
